--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "author": "Chance Hudson",
   "license": "MIT",
+  "bin": {
+    "wallet": "./cli.js"
+  },
   "dependencies": {
     "web3": "^1.3.0"
   }
