--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "wallet": "./cli.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "ethereum-keystore": "0.0.3",
-    "web3": "^1.3.0"
+    "web3": "^1.5.2"
   }
 }
